testsuite/tests/indexed-types/should_fail/T14246.stderr
T14246.hs:20:5: error: [GHC-91510]
    • Illegal polymorphic type: forall (t :: v). f t
    • In the equations for closed type family ‘KLN’
      In the type family declaration for ‘KLN’

T14246.hs:25:27: error: [GHC-83865]
    • Couldn't match kind: S (KLN (f t))
                     with: KLN f
      Expected kind ‘Vect (KLN f) L’,
        but ‘Cons (Label (t :: v)) l’ has kind ‘Vect (S (KLN (f t))) (*)’
    • In the second argument of ‘Reveal’, namely
        ‘(Cons (Label (t :: v)) l)’
      In the type family declaration for ‘Reveal’

T14246.hs:25:67: error: [GHC-83865]
    • Couldn't match kind ‘*’ with ‘L’
      Expected kind ‘Vect (KLN (f t)) L’,
        but ‘l’ has kind ‘Vect (KLN (f t)) (*)’
    • In the second argument of ‘Reveal’, namely ‘l’
      In the type ‘Reveal (f t) l’
      In the type family declaration for ‘Reveal’

T14246.hs:26:24: error: [GHC-83865]
    • Couldn't match kind ‘Z’ with ‘KLN a’
      Expected kind ‘Vect (KLN a) L’, but ‘Nil’ has kind ‘Vect Z L’
    • In the second argument of ‘Reveal’, namely ‘Nil’
      In the type family declaration for ‘Reveal’

